sbatch/slurm_onsetsAndPeaks_1205580.out
Traceback (most recent call last):
  File "onsetsAndPeaks.py", line 2, in <module>
    import DetectionEvalSourceCode as det
  File "/home/njw275/NJW-BirdVox/src/python_files/DetectionEvalSourceCode.py", line 28
    else if (start_time == 29395 and unit == 10):
          ^
SyntaxError: invalid syntax
